# hirekit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETION_SUMMARY.md  DOCUMENTATION_IMPLEMENTATION_PLAN.md  DOCUMENTATION_REVIEW.md  ENHANCEMENT_PLAN.md  IMPLEMENTATION_PROGRESS.md  LICENSE  MASTER_PLAN.md  PROJECT_PLAN.md  README.ko.md  README.md  README_IMPROVED.md  REVIEW_SUMMARY.md  SESSION_FINAL_SUMMARY.md  demo.cast  package.json  playwright.config.js  pyproject.toml
.claude/commands/: analyze.md  coverletter.md  interview.md  match.md  pipeline.md  resume.md  update-db.md
.claude/guides/: hirekit.md
.claude/skills/career-tools/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  update-db.yml
data/companies/: phase_a_rest.json  phase_b_tier1.json  phase_c_top10.json
data/v2_reports/: aws코리아.md  cj_enm.json  cj_enm.md  cj올리브영.json  cj올리브영.md  jyp엔터테인먼트.md  kt.json  kt.md  lg_cns.md  sk텔레콤.md  sk하이닉스.json  sk하이닉스.md  sm엔터테인먼트.json  sm엔터테인먼트.md  ssg닷컴.json  ssg닷컴.md  xai.md  구글코리아.md  그린랩스.md  네이버.json  네이버.md  네이버웹툰.md  네이버클라우드.json  네이버클라우드.md  네이버파이낸셜.md  넥슨코리아.md  넷마블.json  넷마블.md  당근.md  두나무.md  딥마인드코리아.json  딥마인드코리아.md  라인플러스.md  뤼튼.json  뤼튼.md  리디.json  리디.md  리벨리온.json  리벨리온.md  리턴제로.md  (+86 more)
docs/: ADR-001-trust-contract.md  AGENT_PROMPTS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  DESIGN_SYSTEM.md  QA_RELEASE_CHECKS.md  REPORT_QUALITY_GUIDE.md  SECURE_RUNTIME_CONTRACT.md  demo.html  en.html  index.html  ko.html  mcp-config-example.json  tools.html
docs/adr/: phase2-private-runtime-boundary.md
docs/demo/data/: ai_metrics.json  (+11 more)
examples/: config.toml  profile.yaml
scripts/: dart_financial_collector.py  demo.sh
src/hirekit/: __init__.py  __main__.py  mcp_server.py
tests/: conftest.py  test_config.py  test_data_validation.py  test_mcp_server.py  test_public_copy_contract.py  test_public_snapshot_contract.py  test_release_eval.py  test_scorer.py
tests/e2e/: test_demo_war_room.spec.ts  test_tools_flow.spec.ts
tests/test_cli/: test_app.py
tests/test_core/: test_cache.py  test_company_db.py  test_company_resolver.py  test_exceptions.py  test_filters.py  test_parallel.py  test_scoring_completeness.py  test_security.py  test_tech_taxonomy.py  test_trust.py  test_trust_contract.py
tests/test_engine/: test_advisory_panel.py  test_business_segments.py  test_career_strategy.py  test_cliche_detector.py  test_company_analyzer.py  test_company_comparator.py  test_confidence_and_grounding.py  test_cover_letter.py  test_data_normalizer.py  test_data_reviewer.py  test_hero_fixtures.py  test_interview_prep.py  test_jd_matcher.py  test_jd_parser.py  test_llm_pipeline.py  test_proof_of_work.py  test_resume_advisor.py
tests/test_llm/: test_llm_base.py
tests/test_output/: test_markdown.py
tests/test_sources/: test_base.py  test_career_pages.py  test_dart.py  test_github.py  test_pension.py
tools/: add_career_urls.py  add_meta_fields.py  audit_subsidiaries.py  build_company_db.py  check_freshness.py  collect_ai_metrics.py  collect_huggingface.py  collect_job_postings.py  collect_market_data.py  collect_military_service.py  collect_papers.py  collect_pension_data.py  merge_hf_papers_to_meta.py  merge_market_ai_to_meta.py  run_eval.py  sync_meta_from_dart.py  update_company_db.py  verify_company_data.py
(+179 files in other folders)
