[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hirekit"
version = "0.3.0"
description = "AI-powered company analysis and interview preparation CLI for job seekers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ziho"},
]
keywords = ["job-search", "company-analysis", "interview-prep", "career", "dart", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
llm = ["litellm>=1.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
ollama = ["ollama>=0.1"]
notion = ["notion-client>=2.0"]
kr = ["pykrx>=1.0"]
all = ["hirekit[llm,notion,kr]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
hirekit = "hirekit.cli.app:app"

[project.entry-points."hirekit.sources"]
dart = "hirekit.sources.kr.dart:DartSource"
github = "hirekit.sources.global_.github:GitHubSource"
naver_news = "hirekit.sources.kr.naver_news:NaverNewsSource"
naver_search = "hirekit.sources.kr.naver_search:NaverSearchSource"
google_news = "hirekit.sources.global_.google_news:GoogleNewsSource"
brave_search = "hirekit.sources.global_.brave_search:BraveSearchSource"
exa_search = "hirekit.sources.global_.exa_search:ExaSearchSource"
credible_news = "hirekit.sources.global_.credible_news:CredibleNewsSource"
company_website = "hirekit.sources.global_.company_website:CompanyWebsiteSource"
tech_blog = "hirekit.sources.kr.tech_blog:TechBlogSource"
medium_velog = "hirekit.sources.global_.medium_velog:MediumVelogSource"
career_page = "hirekit.sources.global_.career_page:CareerPageSource"
community_review = "hirekit.sources.kr.community_review:CommunityReviewSource"
linkedin_search = "hirekit.sources.global_.linkedin_search:LinkedInSearchSource"

[project.entry-points."hirekit.outputs"]
markdown = "hirekit.output.markdown:MarkdownRenderer"
json = "hirekit.output.json_:JSONRenderer"
terminal = "hirekit.output.terminal:TerminalRenderer"

[project.urls]
Homepage = "https://github.com/zihoshin-dev/hirekit"
Documentation = "https://github.com/zihoshin-dev/hirekit/docs"
Repository = "https://github.com/zihoshin-dev/hirekit"
Issues = "https://github.com/zihoshin-dev/hirekit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hirekit"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["union-attr", "operator", "assignment", "arg-type", "name-defined", "import-untyped"]
# gradual mypy rollout — tighten these over time
